<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context="com.example.zn.loginshareandpaydemo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/color_title"
        android:text="@string/share_main_btn_qq"/>

    <TextView
        android:id="@+id/share_qq_text_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/color_blue"
        android:textSize="16sp"
        android:textColor="@color/color_white"
        android:text="@string/share_text_btn"/>

    <TextView
        android:id="@+id/share_qq_picture_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/color_blue"
        android:textSize="16sp"
        android:textColor="@color/color_white"
        android:text="@string/share_picture_btn"/>

    <TextView
        android:id="@+id/share_qzone_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/color_blue"
        android:textSize="16sp"
        android:textColor="@color/color_white"
        android:text="@string/share_qzone_btn"/>

    <TextView
        android:id="@+id/publish_qzone_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/color_blue"
        android:textSize="16sp"
        android:textColor="@color/color_white"
        android:text="@string/publish_qzone_btn"/>

</LinearLayout>
